--- a/sample.html
+++ b/sample.html
@@ -40,7 +40,7 @@
 
             $(document).ready(function (e)
             {
-                $('#sample').SimpleComboBox();
+                $('#sample').JPComboBox();
             });
 
             $("#btnchange").click(function (e) {
