--- a/sample.html
+++ b/sample.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="/scripts/jquery-1.8.1.js" type="text/javascript"></script>
+    <script src="/scripts/jquery-ui-1.8.20.js" type="text/javascript"></script>
     <script src="scripts/simple-combo-box.js" type="text/javascript"></script>
 
     <link href="styles/simple-combo-box.css" rel="stylesheet" type="text/css" />
